# parsimony

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bench/: results.json
ci/: check_claims.sh
docs/: architecture.d2
src/parsimony/: __init__.py  _hashing.py  admission.py  cli.py  compression.py  config.py  dedup.py  eviction.py  explain.py  geometry.py  objective.py  policy.py  sketch.py  store.py  types.py
src/parsimony/adapters/: __init__.py  embedding.py  mem0.py
src/parsimony/compress_ops/: __init__.py  extractive.py
src/parsimony/harness/: __init__.py  run.py
src/parsimony/loaders/: __init__.py  longmemeval.py
src/parsimony/metrics/: __init__.py
src/parsimony/oracle/: __init__.py  belady.py
src/parsimony/policies/: __init__.py
src/parsimony/trace/: __init__.py  adapter.py
tests/: _helpers.py  test_admission.py  test_compression.py  test_dedup.py  test_determinism.py  test_embedding.py  test_eviction.py  test_explain.py  test_geometry.py  test_harness_cli.py  test_llm_calls_zero.py  test_loaders_trace_metrics.py  test_mem0_adapter.py  test_objective.py  test_policies_oracle.py  test_policy.py  test_sketch.py  test_store.py
